--- a/views/resume/resume002.html
+++ b/views/resume/resume002.html
@@ -653,8 +653,9 @@
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="../../static/js/util.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap-slider/10.2.1/bootstrap-slider.min.js"></script>
-<script src="../../static/plugins/citySelect/distpicker.data.js"></script>
-<script src="../../static/plugins/citySelect/distpicker.js"></script>
+{{/*<script src="../../static/plugins/citySelect/distpicker.data.js"></script>
+<script src="../../static/plugins/citySelect/distpicker.js"></script>*/}}
+<script src="https://cdn.bootcss.com/distpicker/2.0.4/distpicker.min.js"></script>
 <script src="../../static/plugins/qrcode/qrcode.min.js"></script>
 <script src="../../static/js/resume.js"></script>
 <!-- Color JS -->
