--- a/static/resume/resume001_/css/style.css
+++ b/static/resume/resume001_/css/style.css
@@ -2208,6 +2208,9 @@ textarea {
 	position: relative;
 	display: block;
 }
+.td{
+	color: #8f8f8f;
+}
 
 .wrap-about .w-content td{
 	font-size: 20px;
