--- a/views/resume/resume002.html
+++ b/views/resume/resume002.html
@@ -339,7 +339,7 @@
                                 <hr>
                             </div>
                         </div>
-                        <div class="animate fadeInUp">
+                        <div class="animate fadeInDown">
                             <div class="circle" id="skills">
                                 <div class="circle_detail">
                                     <div class="myStat" data-dimension="250" data-text="75%" data-fontsize="18" data-percent="75" data-fgcolor="#fff"></div>
