更改模板001样式可自定义颜色

--- a/static/resume/resume001/css/responsive.css
+++ b/static/resume/resume001/css/responsive.css
@@ -39,7 +39,9 @@
 
 
   /*------- testimonial -------*/
-  #testimonial{ height: 700px;}
+  .owl-carousel .owl-theme{
+	  margin-top: -110px;
+  }
 
   .skillst {margin-top: 50px;}
 }
