--- a/views/resume/resume001.html
+++ b/views/resume/resume001.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="https://cdn.staticfile.org/awesome-bootstrap-checkbox/v0.2.3/awesome-bootstrap-checkbox.min.css">
     <link href="https://cdn.bootcss.com/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/bootstrap-slider/10.2.1/css/bootstrap-slider.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../static/plugins/colorPicker/yl.color.css">
     <!--require end-->
 
     <!-- OWL Carousel -->
@@ -41,12 +42,18 @@
         .col-sm-8 input,textarea{
             margin-top: 4px;
         }
+        .scroll-top:hover{
+            background: #6195FF;
+            color:#fff;
+            border: 1px solid #fff;
+        }
     </style>
 </head>
 <body>
 <div style="display: none;width: 128px" id='qrcode'></div>
 <input type="hidden" id="token" value="{{._xsrf}}">
 <input type="hidden" id="dbData" value="{{.dbData}}">
+<input type="hidden" id="theme4pick" >
 <div id="loading" class="loading-wrap" style="display: none">
     <div class="loader" >
         <div class="la-fire la-3x">
@@ -80,7 +87,7 @@
     <div class="menu-wrap" style="overflow: hidden">
         <nav class="menu" style="overflow: hidden">
             <div class="menu-list" style="overflow: hidden;margin-top: 40px;">
-                <a data="home" href="javascript:animate('home')" class="active" >
+                <a data="home" href="javascript:animate('home')" >
                     主页
                 </a>
                 <a data="about" href="javascript:animate('about')">
@@ -118,6 +125,27 @@
 
 <!--CONTENT WRAP-->
 <div id="mainWrap" class="content-wrap">
+
+    <!-- Color Picker -->
+    <!--展开 visible-color-wrap-->
+    <div style="display: block" class="color-picker-wrap">
+        <span class="col-trigger"><i class="fa fa-paint-brush" aria-hidden="true"></i></span>
+        <div style="width: 100%;text-align: center">
+            <h4>主题颜色选择</h4>
+        </div>
+
+        <div id="drawColor" style="margin: 0 auto;width: 200px;height: 100px;border: 1px solid #EEE;margin-top: 15px;">
+        </div>
+        <div style="text-align: center;margin-top: 15px">
+            <button id="colorPicker" class="btn btn-default">选择颜色</button>
+        </div>
+        <div style="text-align: center;margin-top: 15px">
+            <p>自定义颜色</p><br>
+            <input id="colorInput" onchange="update(this.jscolor)" class="form-control jscolor {closable:true,closeText:'关闭',styleElement:'drawColor',value:'',padding:20, borderWidth:1}" value="">
+        </div>
+    </div>
+    <!-- /.End Of Color Picker -->
+
     <!--CONTENT-->
     <div class="content">
 
@@ -152,7 +180,7 @@
                         <tr>
                             <td class="title">姓名</td>
                             <td class="break">:</td>
-                            <td class="td"><span id="showName">戴勇明</span></td>
+                            <td class="td"><span id="showName">烟熏的花</span></td>
                         </tr>
                         <tr>
                             <td class="title">求职意向</td>
@@ -162,7 +190,7 @@
                         <tr>
                             <td class="title">性别</td>
                             <td class="break">:</td>
-                            <td class="td"><span id="showGender">男</span></td>
+                            <td class="td"><span id="showGender">女</span></td>
                         </tr>
                         <tr>
                             <td class="title">出生日期</td>
@@ -466,27 +494,26 @@
             <div class="container">
                 <div class="row wrap-testimonial">
                     <div class="col-md-10 col-md-offset-1">
-                        <div class="owl-carousel">
+                        <div class="owl-carousel" style="margin-top: -100px;padding-top: 25px;padding-bottom: 25px;">
                             <div class="list-testimonial">
                                 <div class="content-testimonial">
                                     <h3 class="testi">
-                                        我们曾如此渴望命运的波澜，到最后才发现：人生最曼妙的风景竟是内心的淡定与从容；我们曾如此渴望外界的认可
-                                        到最后才发现:世界是自己的，与他人毫无关系。
+                                        我们曾如此渴望命运的波澜,到最后才发现:人生最曼妙的风景竟是内心的淡定与从容;我们曾如此渴望外界的认可
+                                        到最后才发现:世界是自己的,与他人毫无关系.
                                     </h3>
                                 </div>
                             </div>
                             <div class="list-testimonial">
                                 <div class="content-testimonial">
                                     <h3 class="testi">
-                                        对于命运设置的磨难，弱者的应对是退让与憎恨，稍强者的应对是妥协与抗衡，更强者的应对是坚韧与抗争，最强者的应对是自强与超越。
+                                        对于命运设置的磨难,弱者的应对是退让与憎恨,稍强者的应对是妥协与抗衡,更强者的应对是坚韧与抗争,最强者的应对是自强与超越.
                                     </h3>
-
                                 </div>
                             </div>
                             <div class="list-testimonial">
                                 <div class="content-testimonial">
                                     <h3 class="testi">
-                                        我所认为的成熟——喜欢的东西依旧喜欢，但可以不拥有；害怕的东西依旧害怕，但可以面对。
+                                        我所认为的成熟——喜欢的东西依旧喜欢,但可以不拥有;害怕的东西依旧害怕,但可以面对.
                                     </h3>
                                 </div>
                             </div>
@@ -521,7 +548,7 @@
                                 <input id="contact-email"  type="text"><span class="highlight"></span><span class="bar"></span><label>邮箱地址</label>
                             </div>
                             <div class="group">
-                                <textarea id="contact-message" style="min-height: 120px;resize:vertical;border-left: 1px solid #eee;border-top: 1px solid #eee;border-right: 1px solid #eee;" ></textarea><span class="highlight"></span><span class="bar"></span><label>留言信息</label>
+                                <textarea id="contact-message" style="min-height: 120px;resize:vertical;" ></textarea><span class="highlight"></span><span class="bar"></span><label>留言信息</label>
                             </div>
                             <input id="sendMessage" name="sendMessage" type="button" value="提交">
                         </form>
@@ -556,7 +583,7 @@
 </div>
 
 <div id="submitTip">
-    <div id="footerTip" style="color: #ffffff;font-size: 23px;margin-top: 70px;">提交已填写信息即可查看分享简历</div>
+    <div id="footerTip" style="color: #ffffff;font-size: 20px;margin-top: 35px;">提交已填写信息即可查看分享简历</div>
     <button id="submit" class="btn btn-primary" onclick="submit()" style="margin-top: 6px;background: #6397ff">上传信息</button>
 </div>
 
@@ -834,6 +861,26 @@
 <script src="../../static/plugins/qrcode/qrcode.min.js"></script>
 <script src="../../static/js/resume.js"></script>
 <!--require end-->
+<!-- Color JS -->
+<script src="../../static/plugins/colorPicker/color.js"></script>
+<script src="../../static/plugins/colorPicker/jquery.yl.color.js"></script>
+<script src="../../static/plugins/colorPicker/jscolor.js"></script>
+<script>
+    $('#colorPicker').ylColor({
+        onSelect: function(oCol,elem){
+            var color = $(oCol).attr('data-color');
+            $('#drawColor').css({'background-color':color});
+            $('#theme4pick').val(color);
+            renderColor();
+        }
+    });
+    function update(jscolor) {
+        console.log(jscolor.value);
+        $('#theme4pick').val("#"+$('#colorInput').val());
+        renderColor();
+    }
+</script>
+<!--require end-->
 
 <script src="../../static/resume/resume001/js/jquery.appear.js" type="text/javascript"></script>
 <script src="../../static/resume/resume001/js/classie.js" type="text/javascript"></script>
@@ -844,6 +891,7 @@
 <script src="../../static/resume/resume001/js/smooth-scroll.min.js" type="text/javascript"></script>
 <script src="../../static/resume/resume001/js/typed.js" type="text/javascript"></script>
 <script src="../../static/resume/resume001/js/main.js" type="text/javascript"></script>
+
 <script>
     var localData,dbData;
     $(function () {
@@ -853,7 +901,7 @@
         } else {
             // 抱歉！不支持 Web Storage ..
         }
-        localData = localStorage.getItem("resume");
+        localData = localStorage.getItem(window.location.href);
         if(localData){//渲染本地存储数据
             //console.info(JSON.parse(localStorage.getItem("resume")));
             resume = JSON.parse(localData);
@@ -866,12 +914,24 @@
         if(dbData){
             $('#qrcodeBtn').show();
             $('#design').remove();
+            $('.color-picker-wrap').remove();
             //生成二维码
             makeCode();
             resume = dbData;
+            //设置主题颜色
+            localStorage.setItem("theme",resume.ThemeColor);
             renderHtml();
         }else{
             $('#qrcodeBtn').remove();
+        }
+
+        if(!localData&&!dbData){
+            //渲染省市区
+            $("#distpicker").distpicker({
+                province:"北京市" ,
+                city: "北京城区",
+                district: ""
+            });
         }
 
         //渲染数据----------------------------------------------结束
@@ -897,6 +957,50 @@
         },500);
 
     });
+    function renderColor() {
+        var val = $('#theme4pick').val();
+        $('#colorInput').val(val);
+        localStorage.setItem("theme",val);
+
+        $('head').append('<style>.title-small span:after{background: '+val+'}</style>');
+        $('.wrap-card').hover(function () {
+            //box-shadow: 20px 20px 0px #6195FF;
+           $(this).css('box-shadow',"20px 20px 0px "+val);
+        },function () {
+            $(this).css('box-shadow',"0px 0px 0px "+val);
+        });
+        $('head').append('<style>.card:before,.card:after{background:'+val+'}</style>');
+        $('head').append('<style>.wrap-card:before,.wrap-card:after{background:'+val+'}</style>');
+        $('.company').css("border-bottom","3px solid "+val);
+        $('.skillst .count-bar').css("background-color",val);
+        $('head').append('<style>.skillst .count-bar .count span:after{border-top:4px solid '+val+'}</style>');
+        $('.skillst .count-bar .count').css('background-color',val);
+        $('#contact input[type=button]').css('border',"1px solid "+val);
+        $('#contact input[type=button]').hover(function () {
+            $(this).css("background",val);
+            $(this).css('border',"1px solid "+val+" !important");
+            $(this).css("color","#fff");
+        },function () {
+            $(this).css("background","#fff");
+            $(this).css("color","#333333");
+        });
+        $('#contact input, #contact textarea').css('border','1px solid '+val);
+        $('head').append('<style>#contact .bar:before, #contact .bar:after{background:'+val+'}</style>');
+        $('.scroll-top').hover(function () {
+            $(this).css("background",val);
+            $(this).css("color","#fff");
+            $(this).css("border-color","#fff");
+        },function () {
+            $(this).css("background","rgba(0, 0, 0, 0.75)");
+        });
+        $('head').append('<style>.menu-list a.active{border-left:3px solid'+val+'}</style>');
+        $('.menu-list a').hover(function () {
+            $(this).css('color',val);
+        },function () {
+            $(this).css('color','#fff');
+        });
+
+    }
     function renderHtml() {
         //隐藏关闭按钮
         $('#modalClose').hide();
@@ -913,6 +1017,10 @@
         $("#showGender").html(resume.Gender);
         if(resume.Gender==="女"){
             $('.bg-about').css("background","url(../../static/resume/resume001/images/about/about01_.jpg) center center");
+            $('.bg-about').css("background-size","cover");
+            $('.bg-about').css("background-repeat","no-repeat");
+        }else{
+            $('.bg-about').css("background","url(../../static/resume/resume001/images/about/about02_.jpg) center center");
             $('.bg-about').css("background-size","cover");
             $('.bg-about').css("background-repeat","no-repeat");
         }
@@ -1046,6 +1154,14 @@
                     '                                    </div>\n' +
                     '                                </li>');
         }
+
+        var color = localStorage.getItem("theme");
+        if(!color){
+            //默认颜色
+            color = "#6195FF";
+        }
+        $('#theme4pick').val(color);
+        renderColor();
     }
 </script>
 
