--- a/views/resume/resume003.html
+++ b/views/resume/resume003.html
@@ -100,9 +100,7 @@
                 <div class="container">
                     <div class="right-side">
                         <p>
-                            <button id="trigger-overlay" type="button">
-                                <span class="fa fa-bars" aria-hidden="true"></span>
-                            </button>
+                            <span style="font-size: 35px;color: #ffffff" id="trigger-overlay" class="fa fa-bars" aria-hidden="true"></span>
                         </p>
                     </div>
                     <!-- open/close -->
@@ -306,7 +304,7 @@
                             <h5>Bachelor Degree Of Education</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
                         </div>
-                        <div class="edu-right back-shadow clr-green">
+                        <div class="edu-right back-shadow ">
                             <h6>2011-2014</h6>
                             <h5>Bachelor Degree Of Education</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
@@ -316,7 +314,7 @@
                             <h5>Bachelor Degree Of Education</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
                         </div>
-                        <div class="edu-right back-shadow clr-green">
+                        <div class="edu-right back-shadow ">
                             <h6>2011-2014</h6>
                             <h5>Bachelor Degree Of Education</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
@@ -330,14 +328,14 @@
 
         <div  id="work_nav">
             <div class="container">
-                <div class="experience-info work1">
+                <div class="experience-info work1" style="padding-top: 30px">
                     <div  class="col-md-7 exp-matter showWorkWrap">
                         <div class="exp-left back-shadow">
                             <h6>2012-2014</h6>
                             <h5>WebDesigner – Mutation Media</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
                         </div>
-                        <div class="exp-left back-shadow clr-green">
+                        <div class="exp-left back-shadow">
                             <h6>2011-2012</h6>
                             <h5>WebDesigner – Mutation Media</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
@@ -347,7 +345,7 @@
                             <h5>WebDesigner – Mutation Media</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
                         </div>
-                        <div class="exp-left back-shadow clr-green">
+                        <div class="exp-left back-shadow ">
                             <h6>2008-2009</h6>
                             <h5>WebDesigner – Mutation Media</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
@@ -358,7 +356,7 @@
                     </div>
                     <div class="clearfix"></div>
                 </div>
-                <div class="education work2">
+                <div class="education work2" style="padding-top: 25px;">
                     <div class="col-md-5 education-info">
                         <h4 class="back-shadow" style="padding: 15px 0px">工作经历</h4>
                     </div>
@@ -368,7 +366,7 @@
                             <h5>Bachelor Degree Of Education</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
                         </div>
-                        <div class="edu-right back-shadow clr-green">
+                        <div class="edu-right back-shadow ">
                             <h6>2011-2014</h6>
                             <h5>Bachelor Degree Of Education</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
@@ -378,7 +376,7 @@
                             <h5>Bachelor Degree Of Education</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
                         </div>
-                        <div class="edu-right back-shadow clr-green">
+                        <div class="edu-right back-shadow ">
                             <h6>2011-2014</h6>
                             <h5>Bachelor Degree Of Education</h5>
                             <p>Lorem ipsum dolor sit amet,</p>
@@ -468,6 +466,7 @@
             </div>
         </div>
     </div>
+
     <!--提交提示-->
     <div id="submitTip" style="background: #333333">
         <div id="footerTip" style="color: #ffffff;font-size: 20px;margin-top: 35px;">提交已填写信息即可查看分享简历</div>
