--- a/views/resume/resume003.html
+++ b/views/resume/resume003.html
@@ -129,7 +129,7 @@
                     <ul class="rslides" id="slider4">
                         <li>
                             <div class="slider-img">
-                                <div class="container">
+                                <div class="container" style="padding: 0px;width: 100%;">
                                     <div class="slider-info">
                                         <h4>Hi,我是<span class="showName">烟熏的花</span>
                                         </h4>
@@ -140,7 +140,7 @@
                         </li>
                         <li>
                             <div class="slider-img ">
-                                <div class="container">
+                                <div class="container" style="padding: 0px;width: 100%;">
                                     <div class="slider-info">
                                         <h4>我来自<span class="showProvince">福建</span>-<span class="showCity">厦门</span></h4>
                                         <p>🙂</p>
