--- a/views/resume/resume006.html
+++ b/views/resume/resume006.html
@@ -185,9 +185,9 @@
                                 </div>*/}}
                                 <div class="col-sm-12" style="text-align: center">
                                     <div class="home_text">
-                                        <h4 style="color: #fff">Hi , 我是烟熏的花</h4>
+                                        <h4 style="color: #fff">Hi , 我是<span class="showName">烟熏的花</span></h4>
                                         <br>
-                                        <h1 class="text-white"><span style="color: #1a1a1a">#</span>UI设计师</h1>
+                                        <h1 class="text-white"><span style="color: #1a1a1a">#</span><span class="showObjective">UI设计师</span></h1>
                                     </div>
 
                                     <div class="home_btns m-top-40 text-center">
@@ -547,7 +547,7 @@
                                             <div class="author_text text-right">
                                                 <h5>2018.12.29</h5>
                                                 <h1><span class="showName">烟熏的花</span></h1>
-                                                <h6>UI设计师</h6>
+                                                <h6><span class="showObjective">UI设计师</span></h6>
                                             </div>
                                         </div>
                                     </div>
